Apply clean code to Trivia lab: Fix compiler warnings using IDE refactorings.